--- a/post/2025-04-15-unit01/nano-gpt/annotated-gpt_dev.qmd
+++ b/post/2025-04-15-unit01/nano-gpt/annotated-gpt_dev.qmd
@@ -14,6 +14,7 @@ format:
     code-line-numbers: true
     code-tools: true
     code-wrap: true
+description: Companion notebook from Karpathys video on building a minimal GPT, annotated by cursors LLM with summary from gemini.
 ---
 
 ## Building a GPT
@@ -22,7 +23,9 @@ Companion notebook to the [Zero To Hero](https://karpathy.ai/zero-to-hero.html) 
 
 (https://github.com/karpathy/nanoGPT)
 
-### download the tiny shakespeare dataset
+## Data Preparation
+
+### Step 1: Loading & Inspection
 ```{python}
 # We always start with a dataset to train on. Let's download the tiny shakespeare dataset
 #!wget https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt
@@ -44,6 +47,7 @@ print("length of dataset in characters: ", len(text))
 print(text[:1000])
 ```
 
+### Step 2: Tokenization
 ```{python}
 # here are all the unique characters that occur in this text
 chars = sorted(list(set(text)))
@@ -63,6 +67,182 @@ print(encode("hii there"))
 print(decode(encode("hii there")))
 ```
 
+### Step 3: Creating Batches for Training
+```{python}
+# let's now encode the entire text dataset and store it into a torch.Tensor
+import torch # we use PyTorch: https://pytorch.org
+data = torch.tensor(encode(text), dtype=torch.long)
+print(data.shape, data.dtype)
+print(data[:1000]) # the 1000 characters we looked at earier will to the GPT look like this
+```
+
+```{python}
+# split up the data into train and validation sets
+n = int(0.9*len(data)) # first 90% will be train, rest val
+train_data = data[:n]
+val_data = data[n:]
+```
+
+```{python}
+# define the block size (context length)
+block_size = 8
+train_data[:block_size+1]
+```
+
+### Understanding the Context and Target
+```{python}
+x = train_data[:block_size]
+y = train_data[1:block_size+1]
+for t in range(block_size):
+    context = x[:t+1]
+    target = y[t]
+    print(f"when input is {context} the target: {target}")
+```
+
+### Creating Batches
+```{python}
+torch.manual_seed(1337)
+batch_size = 4 # how many independent sequences will we process in parallel?
+block_size = 8 # what is the maximum context length for predictions?
+
+def get_batch(split):
+    # generate a small batch of data of inputs x and targets y
+    data = train_data if split == 'train' else val_data
+    ix = torch.randint(len(data) - block_size, (batch_size,))
+    x = torch.stack([data[i:i+block_size] for i in ix])
+    y = torch.stack([data[i+1:i+block_size+1] for i in ix])
+    return x, y
+
+xb, yb = get_batch('train')
+print('inputs:')
+print(xb.shape)
+print(xb)
+print('targets:')
+print(yb.shape)
+print(yb)
+
+print('----')
+
+for b in range(batch_size): # batch dimension
+    for t in range(block_size): # time dimension
+        context = xb[b, :t+1]
+        target = yb[b,t]
+        print(f"when input is {context.tolist()} the target: {target}")
+```
+
+## Model Architecture
+
+### Starting Simple: Bigram Language Model
+This model predicts the next character based on the current character only. 
+It uses the logits for the next character in a lookup table.
+
+Key points:
+- Simplest possible model
+- Uses an Embedding Table of size vocab_size x vocab_size
+- Each row contains predicted scores for next character
+- Ignores context beyond last character
+```{python}
+# define the bigram language model
+import torch
+import torch.nn as nn
+from torch.nn import functional as F
+torch.manual_seed(1337)
+
+class BigramLanguageModel(nn.Module):
+
+    def __init__(self, vocab_size):
+        super().__init__()
+        # each token directly reads off the logits for the next token from a lookup table
+        self.token_embedding_table = nn.Embedding(vocab_size, vocab_size)
+
+    def forward(self, idx, targets=None):
+
+        # idx and targets are both (B,T) tensor of integers
+        logits = self.token_embedding_table(idx) # (B,T,C)
+
+        if targets is None:
+            loss = None
+        else:
+            B, T, C = logits.shape
+            logits = logits.view(B*T, C)
+            targets = targets.view(B*T)
+            loss = F.cross_entropy(logits, targets)
+
+        return logits, loss
+
+    # Text Generation Method
+    # This method implements autoregressive text generation by:
+    # 1. Taking the current context (idx)
+    # 2. Predicting the next token probabilities
+    # 3. Sampling from these probabilities
+    # 4. Appending the sampled token to the context
+    # 5. Repeating for max_new_tokens iterations
+    def generate(self, idx, max_new_tokens):
+        for _ in range(max_new_tokens):
+            # get the predictions
+            logits, loss = self(idx)
+            # focus only on the last time step
+            logits = logits[:, -1, :] # becomes (B, C)
+            # apply softmax to get probabilities
+            probs = F.softmax(logits, dim=-1) # (B, C)
+            # sample from the distribution
+            idx_next = torch.multinomial(probs, num_samples=1) # (B, 1)
+            # append sampled index to the running sequence
+            idx = torch.cat((idx, idx_next), dim=1) # (B, T+1)
+        return idx
+```
+
+### Understanding Cross Entropy Loss
+Loss = -Σ(y * log(p))
+where:
+- y = actual probability (0 or 1)
+- p = predicted probability
+- Σ = sum over all classes
+
+This is the loss for a single token. The total loss is the average across all B*T tokens in the batch, where:
+- B = batch size (number of sequences processed in parallel)
+- T = sequence length (number of tokens in each sequence)
+
+Before training, we would expect the model to predict the next character from a uniform distribution.
+
+-Σ(y * log(p)) = 
+= - ( 1 * log(1/65) + 0 * log(1/65) + 0 * log(1/65) + 0 * log(1/65) + 0 * log(1/65) + 0 * log(1/65) + 0 * log(1/65) + 0 * log(1/65) ) = - log(1/65) 
+= 4.1744 per token.
+
+i.e. at the beginning we expect loss of -log(1/65) = 4.1744 per token.
+
+### Model Initialization and Training
+```{python}
+m = BigramLanguageModel(vocab_size)
+logits, loss = m(xb, yb)
+print(logits.shape)
+print(loss)
+```
+
+### Text Generation
+```{python}
+print(decode(m.generate(idx = torch.zeros((1, 1), dtype=torch.long), max_new_tokens=100)[0].tolist()))
+```
+
+### Training Setup
+```{python}
+optimizer = torch.optim.AdamW(m.parameters(), lr=1e-3)
+```
+
+### Training Loop
+```{python}
+batch_size = 32
+for steps in range(100): # increase number of steps for good results...
+
+    # sample a batch of data
+    xb, yb = get_batch('train')
+
+    # evaluate the loss
+    logits, loss = m(xb, yb)
+    optimizer.zero_grad(set_to_none=True)
+    loss.backward()
+    optimizer.step()
+```
 
 ```{python}
 # %pip install torch torchvision torchaudio scikit-learn
@@ -257,9 +437,12 @@ print(loss.item())
 print(decode(m.generate(idx = torch.zeros((1, 1), dtype=torch.long), max_new_tokens=500)[0].tolist()))
 ```
 
-## The mathematical trick in self-attention
+## Self-Attention: The Key Innovation
 
-### toy example illustrating how matrix multiplication can be used for a "weighted aggregation"
+### Understanding Self-Attention
+Self-attention allows tokens to communicate across the sequence in a data-dependent way. Each token can "look" at previous tokens and decide which ones are most relevant for predicting the next token.
+
+### The Mathematical Trick: Weighted Aggregation
 ```{python}
 torch.manual_seed(42)
 a = torch.tril(torch.ones(3, 3))
@@ -276,16 +459,15 @@ print('c=')
 print(c)
 ```
 
+### Version 1: Using a For Loop
 ```{python}
 # consider the following toy example:
-
 torch.manual_seed(1337)
 B,T,C = 4,8,2 # batch, time, channels
 x = torch.randn(B,T,C)
 x.shape
 ```
 
-### version 1: using a for loop to compute the weighted aggregation
 ```{python}
 # We want x[b,t] = mean_{i<=t} x[b,i]
 xbow = torch.zeros((B,T,C))
@@ -295,7 +477,7 @@ for b in range(B):
         xbow[b,t] = torch.mean(xprev, 0)
 ```
 
-### version 2: using matrix multiply for a weighted aggregation
+### Version 2: Matrix Multiplication
 ```{python}
 wei = torch.tril(torch.ones(T, T))
 wei = wei / wei.sum(1, keepdim=True)
@@ -303,7 +485,7 @@ xbow2 = wei @ x # (B, T, T) @ (B, T, C) ----> (B, T, C)
 torch.allclose(xbow, xbow2)
 ```
 
-### version 3: use Softmax
+### Version 3: Using Softmax
 ```{python}
 tril = torch.tril(torch.ones(T, T))
 wei = torch.zeros((T,T))
@@ -313,11 +495,7 @@ xbow3 = wei @ x
 torch.allclose(xbow, xbow3)
 ```
 
-**softmax function**
-
-softmax($z_i$) = $\frac{e^{z_i}}{\sum_j e^{z_j}}$
-
-# version 4: self-attention
+### Version 4: Self-Attention
 ```{python}
 torch.manual_seed(1337)
 B,T,C = 4,8,32 # batch, time, channels
@@ -344,20 +522,10 @@ out = wei @ v
 out.shape
 ```
 
-```{python}
-wei[0]
-```
-
-Notes:
-- Attention is a **communication mechanism**. Can be seen as nodes in a directed graph looking at each other and aggregating information with a weighted sum from all nodes that point to them, with data-dependent weights.
-- There is no notion of space. Attention simply acts over a set of vectors. This is why we need to positionally encode tokens.
-- Each example across batch dimension is of course processed completely independently and never "talk" to each other
-- In an "encoder" attention block just delete the single line that does masking with `tril`, allowing all tokens to communicate. This block here is called a "decoder" attention block because it has triangular masking, and is usually used in autoregressive settings, like language modeling.
-- "self-attention" just means that the keys and values are produced from the same source as queries. In "cross-attention", the queries still get produced from x, but the keys and values come from some other, external source (e.g. an encoder module)
-
-
-### why scaled attention?
-- "Scaled" attention additional divides `wei` by 1/sqrt(head_size). This makes it so when input Q,K are unit variance, wei will be unit variance too and Softmax will stay diffuse and not saturate too much. Illustration below
+### Why Scaled Attention?
+- Dividing by sqrt(head_size) prevents scores from becoming too large
+- Keeps softmax from producing overly sharp distributions
+- Aids training stability
 
 ```{python}
 k = torch.randn(B,T,head_size)
@@ -385,7 +553,9 @@ torch.softmax(torch.tensor([0.1, -0.2, 0.3, -0.2, 0.5]), dim=-1)
 torch.softmax(torch.tensor([0.1, -0.2, 0.3, -0.2, 0.5])*8, dim=-1) # gets too peaky, converges to one-hot
 ```
 
-### LayerNorm1d
+## Layer Normalization
+Layer normalization normalizes features across the embedding dimension for each token independently, which helps stabilize training.
+
 ```{python}
 class LayerNorm1d: # (used to be BatchNorm1d)
 
@@ -704,6 +874,251 @@ for iter in range(max_iters):
 context = torch.zeros((1, 1), dtype=torch.long, device=device)
 print(decode(m.generate(context, max_new_tokens=2000)[0].tolist()))
 # ============================================
+```
+
+## Full GPT Model Architecture
+
+### Key Components
+1. **Token Embeddings**: Convert input tokens to vectors
+2. **Position Embeddings**: Add positional information
+3. **Transformer Blocks**: Process information through attention and feed-forward layers
+4. **Layer Normalization**: Stabilize training
+5. **Language Model Head**: Predict next token probabilities
+
+### Hyperparameters
+```{python}
+# ===== HYPERPARAMETERS =====
+batch_size = 16        # Number of independent sequences processed in parallel
+block_size = 32        # Maximum context length for predictions
+max_iters = 5000       # Total number of training iterations
+eval_interval = 100    # How often to evaluate the model
+learning_rate = 1e-3   # Step size for gradient descent
+eval_iters = 200       # Number of iterations to average over when evaluating
+n_embd = 64           # Size of the embedding dimension
+n_head = 4            # Number of attention heads
+n_layer = 4           # Number of transformer layers
+dropout = 0.0         # Probability of dropping out neurons
+# ==========================
+```
+
+### Device Selection
+```{python}
+# Device selection: MPS (Apple Silicon) > CUDA > CPU
+if torch.backends.mps.is_available():
+    device = torch.device("mps")  # Apple Silicon GPU
+elif torch.cuda.is_available():
+    device = torch.device("cuda")  # NVIDIA GPU
+else:
+    device = torch.device("cpu")   # CPU fallback
+print(f"Using device: {device}")
+```
+
+### Attention Head Implementation
+```{python}
+class Head(nn.Module):
+    """Single head of self-attention."""
+    
+    def __init__(self, head_size):
+        super().__init__()
+        # Key, Query, Value projections
+        self.key = nn.Linear(n_embd, head_size, bias=False)
+        self.query = nn.Linear(n_embd, head_size, bias=False)
+        self.value = nn.Linear(n_embd, head_size, bias=False)
+        # Create lower triangular mask for causal attention
+        self.register_buffer('tril', torch.tril(torch.ones(block_size, block_size)))
+        self.dropout = nn.Dropout(dropout)
+
+    def forward(self, x):
+        B,T,C = x.shape
+        # Compute key, query, and value matrices
+        k = self.key(x)   # (B,T,C)
+        q = self.query(x) # (B,T,C)
+        # Compute attention scores
+        wei = q @ k.transpose(-2,-1) * C**-0.5  # Scale by sqrt(d_k)
+        wei = wei.masked_fill(self.tril[:T, :T] == 0, float('-inf'))  # Apply mask
+        wei = F.softmax(wei, dim=-1)  # Convert to probabilities
+        wei = self.dropout(wei)
+        # Weighted aggregation of values
+        v = self.value(x)
+        out = wei @ v
+        return out
+```
+
+### Multi-Head Attention
+```{python}
+class MultiHeadAttention(nn.Module):
+    """Multiple heads of self-attention in parallel."""
+    
+    def __init__(self, num_heads, head_size):
+        super().__init__()
+        self.heads = nn.ModuleList([Head(head_size) for _ in range(num_heads)])
+        self.proj = nn.Linear(n_embd, n_embd)  # Projection layer
+        self.dropout = nn.Dropout(dropout)
+
+    def forward(self, x):
+        # Process through each head and concatenate results
+        out = torch.cat([h(x) for h in self.heads], dim=-1)
+        out = self.dropout(self.proj(out))
+        return out
+```
+
+### Feed-Forward Network
+```{python}
+class FeedFoward(nn.Module):
+    """Simple feed-forward network with one hidden layer."""
+    
+    def __init__(self, n_embd):
+        super().__init__()
+        self.net = nn.Sequential(
+            nn.Linear(n_embd, 4 * n_embd),  # Expand dimension
+            nn.ReLU(),                      # Non-linearity
+            nn.Linear(4 * n_embd, n_embd),  # Project back
+            nn.Dropout(dropout),
+        )
+
+    def forward(self, x):
+        return self.net(x)
+```
+
+### Transformer Block
+```{python}
+class Block(nn.Module):
+    """Transformer block: communication (attention) followed by computation (FFN)."""
+    
+    def __init__(self, n_embd, n_head):
+        super().__init__()
+        head_size = n_embd // n_head  # floor(n_embd / n_head)
+        self.sa = MultiHeadAttention(n_head, head_size)
+        self.ffwd = FeedFoward(n_embd)
+        self.ln1 = nn.LayerNorm(n_embd)  # Layer normalization
+        self.ln2 = nn.LayerNorm(n_embd)
+
+    def forward(self, x):
+        # Apply attention with residual connection
+        x = x + self.sa(self.ln1(x))
+        # Apply feed-forward with residual connection
+        x = x + self.ffwd(self.ln2(x))
+        return x
+```
+
+### Full Language Model
+```{python}
+class BigramLanguageModel(nn.Module):
+    """Simple bigram language model with transformer architecture."""
+    
+    def __init__(self):
+        super().__init__()
+        # Token embeddings
+        self.token_embedding_table = nn.Embedding(vocab_size, n_embd)
+        # Position embeddings
+        self.position_embedding_table = nn.Embedding(block_size, n_embd)
+        # Stack of transformer blocks
+        self.blocks = nn.Sequential(*[Block(n_embd, n_head=n_head) for _ in range(n_layer)])
+        self.ln_f = nn.LayerNorm(n_embd)  # Final layer norm
+        self.lm_head = nn.Linear(n_embd, vocab_size)  # Language model head
+
+    def forward(self, idx, targets=None):
+        B, T = idx.shape
+        
+        # Get token embeddings
+        tok_emb = self.token_embedding_table(idx)  # (B,T,C)
+        # Get position embeddings
+        pos_emb = self.position_embedding_table(torch.arange(T, device=device))  # (T,C)
+        # Combine token and position embeddings
+        x = tok_emb + pos_emb  # (B,T,C)
+        # Process through transformer blocks
+        x = self.blocks(x)  # (B,T,C)
+        x = self.ln_f(x)  # (B,T,C)
+        logits = self.lm_head(x)  # (B,T,vocab_size)
+
+        if targets is None:
+            loss = None
+        else:
+            # Reshape for loss calculation
+            B, T, C = logits.shape
+            logits = logits.view(B*T, C)
+            targets = targets.view(B*T)
+            loss = F.cross_entropy(logits, targets)
+
+        return logits, loss
+
+    def generate(self, idx, max_new_tokens):
+        """Generate new text given a starting sequence."""
+        for _ in range(max_new_tokens):
+            # Crop context to block_size
+            idx_cond = idx[:, -block_size:]
+            # Get predictions
+            logits, loss = self(idx_cond)
+            # Focus on last time step
+            logits = logits[:, -1, :]  # (B, C)
+            # Convert to probabilities
+            probs = F.softmax(logits, dim=-1)  # (B, C)
+            # Sample from distribution
+            idx_next = torch.multinomial(probs, num_samples=1)  # (B, 1)
+            # Append to sequence
+            idx = torch.cat((idx, idx_next), dim=1)  # (B, T+1)
+        return idx
+```
+
+### Training Loop
+```{python}
+# Create model instance
+model = BigramLanguageModel()
+m = model.to(device)
+# Print number of parameters
+print(sum(p.numel() for p in m.parameters())/1e6, 'M parameters')
+
+# Create optimizer
+optimizer = torch.optim.AdamW(model.parameters(), lr=learning_rate)
+
+# Training loop
+for iter in range(max_iters):
+    # Evaluate loss periodically
+    if iter % eval_interval == 0 or iter == max_iters - 1:
+        losses = estimate_loss()
+        print(f"step {iter}: train loss {losses['train']:.4f}, val loss {losses['val']:.4f}")
+
+    # Get batch of data
+    xb, yb = get_batch('train')
+
+    # Forward pass
+    logits, loss = model(xb, yb)
+    # Backward pass
+    optimizer.zero_grad(set_to_none=True)
+    loss.backward()
+    optimizer.step()
+
+# Generate text from the model
+context = torch.zeros((1, 1), dtype=torch.long, device=device)
+print(decode(m.generate(context, max_new_tokens=2000)[0].tolist()))
+```
+
+## Key Takeaways
+
+1. **Data Preparation**
+   - Tokenization: Convert text to numerical representations
+   - Batching: Create efficient training batches
+   - Context and Targets: Understand the prediction task
+
+2. **Model Architecture**
+   - Token and Position Embeddings
+   - Self-Attention Mechanism
+   - Transformer Blocks
+   - Layer Normalization
+   - Language Model Head
+
+3. **Training Process**
+   - Loss Function: Cross-Entropy
+   - Optimization: AdamW
+   - Evaluation: Periodic validation checks
+   - Generation: Autoregressive text generation
+
+4. **Key Concepts**
+   - Self-Attention: Communication between tokens
+   - Positional Encoding: Preserving sequence order
+   - Residual Connections: Helping gradient flow
+   - Layer Normalization: Stabilizing training
+   - Multi-Head Attention: Capturing different relationships
 ```
 
 
